--- a/.github/workflows/news-koinize-com.yml
+++ b/.github/workflows/news-koinize-com.yml
@@ -8,7 +8,6 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'content/**'
       - 'data/**'
   pull_request:
     branches: [ main1 ]
@@ -34,7 +33,21 @@ jobs:
             submodules: true  # Fetch Hugo themes
             fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
-      # Step 2 - Sets up the latest version of Hugo
+      - name: Install dependencies
+        run: npm install
+        
+      - name: Generate Markdown files
+        run: node scripts/generateUniqueMDFiles.js
+        
+      - name: Commit and push files
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Action"
+          git add .
+          git commit -m "Added generated MD files"
+          git push
+
+      # Sets up the latest version of Hugo
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
